# nmcurse-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  manual-release.yml  release.yml
src/: main.rs  network.rs  ui.rs
