[package]
name = "nmcurse"
version = "0.1.7"
edition = "2021"
authors = ["nhktmdzhg"]
description = "A network management tool using ncurses"
repository = "https://github.com/nhktmdzhg/nmcurse-rs"
license = "MIT"
keywords = ["network", "ncurses", "wifi", "terminal", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ncurses = "5.101.0"
libc = "0.2"
cc = "1.0.18"
pkg-config = "0.3"
zeroize = { version = "1.8.1", features = ["std"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
